Forgot to save file

--- a/index.html
+++ b/index.html
@@ -82,11 +82,17 @@
                             <p><input type="radio" name="" value="">Option 3</p>
                             <p><input type="radio" name="" value="">Option 4</p>
                         </div>
-
                     </form>
                 </div>
                 
                 <div id="test-right">
+                    <div id="score">
+                        <h1><sup>x</sup>&frasl;<sub>y</sub></h1>
+                    </div>
+                    <div class="button"><h3>Clear Test</h3>
+                    </div>
+                    <div class="button"><h3>Check Test</h3>
+                    </div>
                 </div>
             </div>
             
