Add random test functionality

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <div id="score">
                         <h1><sup>x</sup>&frasl;<sub>y</sub></h1>
                     </div>
-                    <div class="button">Clear Test</div>
-                    <div class="button">Check Test</div>
+                    <div class="button" onclick="clearTest()">Clear Test</div>
+                    <div class="button" onclick="checkTest()">Check Test</div>
                 </div>
             </div>
             
