--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
             <!--test creation screen-->
             <div id="create-test">
                 <form name="premade-test" id="premade">
-                    <select name="premade-options">
+                    <div class="dropbtn">
+                        <h3 id="test-selected">Choose test...</h3>
+                        <div class="dropdown">
+                            <h3 class="option" onclick="setOption(this)">Test 1</h3>
+                            <h3 class="option" onclick="setOption(this)">Test 2</h3>
+                            <h3 class="option" onclick="setOption(this)">Test 3</h3>
+                            <h3 class="option" onclick="setOption(this)">Test 4</h3>
+                            <h3 class="option" onclick="setOption(this)">Test 5</h3>
+                            <h3 class="option" onclick="setOption(this)">Test 6</h3>
+                            <h3 class="option" onclick="setOption(this)">Random</h3>
+                        </div>
+                    
+                    </div>
+                    <!--<select name="premade-options">
                         <option value="" disabled selected>Choose...</option>
                         <option value="Test 1">Test 1</option>
                         <option value="Test 2">Test 2</option>
@@ -26,7 +39,7 @@
                         <option value="Test 5">Test 5</option>
                         <option value="Test 6">Test 6</option>
                         <option value="random">Random</option>
-                    </select>
+                    </select>-->
 
                     <div class="button" id="load-test" onclick="loadTest()">Load</div>
                 </form>
