Styling and test name

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="play-test">
                 <div id="test-left">
                     <h1 id="test-title">Test Example</h1>
-                    <h2 id="test info">Category | Difficulty | #Questions</h2>
+                    <!--<h2 id="test info">Mixed | Difficulty | #Questions</h2>-->
                     
                     <form id="test">
                         <!--questions will appear here when test is selected-->
