Custom test title and info

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div id="play-test">
                 <div id="test-left">
                     <h1 id="test-title">Random Test</h1>
-                    <!--<h2 id="test info">Mixed | Difficulty | #Questions</h2>-->
+                    <h2 id="test info">Mixed | Difficulty | #Questions</h2>
                     
                     <form id="test">
                         <!--questions will appear here when test is selected-->
