Clarity, fix clear test

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     
                     <div class="button" id="custom-test" onclick="loadCustom()">Create</div>
-                    <div class="button"  onclick="makeRandom()">Random</div>
+                    <div class="button"  onclick="loadRandom()">Random</div>
                 </form>
             </div>
             
