Reset on new test

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <hr>
                 
                 <!--form for tests created from open trivia database-->
-                <form name="user-test">
+                <form name="user-test" id="user-test">
                     <h1>Create your own</h1>
                     <input type="number" name="num" placeholder="# Questions" min="1" max="99">
                     
